--- a/多语言/笔记.md
+++ b/多语言/笔记.md
@@ -1,1 +1,2 @@
 
+<img width="2048" height="2048" alt="LeafSet029_2K-PNG_Color" src="https://github.com/user-attachments/assets/976c3710-174b-4d05-9347-cd731954f9c5" />
