--- a/多语言/笔记.md
+++ b/多语言/笔记.md
@@ -1,2 +1,6 @@
+下面这行代码是填充请求头和内容的
+<img width="602" height="636" alt="image" src="https://github.com/user-attachments/assets/d4a572d0-439b-4398-bfdc-b88bb12c7ef1" />
+请求头解释
+<img width="865" height="482" alt="image" src="https://github.com/user-attachments/assets/da827f65-2ffb-46fb-9ff9-93745dce6480" />
+内容就依据API官方的JSON格式传入字符串就可以了
 
-<img width="2048" height="2048" alt="LeafSet029_2K-PNG_Color" src="https://github.com/user-attachments/assets/976c3710-174b-4d05-9347-cd731954f9c5" />
