--- a/性能优化/内存优化.md
+++ b/性能优化/内存优化.md
@@ -1,2 +1,6 @@
 
 [Memoery profiler.pdf](https://github.com/user-attachments/files/23381812/Memoery.profiler.pdf)
+GC问题在于：
+
+<img width="519" height="144" alt="image" src="https://github.com/user-attachments/assets/47899114-71c6-492c-92c1-8c49eb24916e" />
+
