--- a/性能优化/内存优化.md
+++ b/性能优化/内存优化.md
@@ -5,3 +5,8 @@ GC问题在于：
 
 <img width="519" height="144" alt="image" src="https://github.com/user-attachments/assets/47899114-71c6-492c-92c1-8c49eb24916e" />
 
+GC理解：
+
+<img width="1005" height="529" alt="image" src="https://github.com/user-attachments/assets/132839db-1f29-4456-b76d-456437f9ce2b" />
+
+
