--- a/性能优化/内存优化.md
+++ b/性能优化/内存优化.md
@@ -9,4 +9,10 @@ GC理解：
 
 <img width="1005" height="529" alt="image" src="https://github.com/user-attachments/assets/132839db-1f29-4456-b76d-456437f9ce2b" />
 
+在开发Spider项目中发现有386B的GC每帧都存在后来发现是CineMachineBrain组件造成的。
+Memoery隔一段时间有一个10KB的GC，但是在CPU中只还是有386B，原因是CPU中只记录主线程的。可以在Memoery Profiler中找到这部分剩余的GC。
+
+<img width="897" height="147" alt="image" src="https://github.com/user-attachments/assets/6b3db780-3013-4174-b315-275e791fd1bc" />
+
+
 
