--- a/后处理与相机_实现景深效果/笔记.md
+++ b/后处理与相机_实现景深效果/笔记.md
@@ -1,2 +1,24 @@
+原理：渲染的流程是摄像机渲染出图片后加Volume。A是主摄像机，B是创建的模糊相机。然后将B相机渲染出图片，然后与A结果合并，合并后再执行B的Volume（后处理）。
+
 <img width="568" height="1307" alt="image" src="https://github.com/user-attachments/assets/4875ba73-5670-4a8e-8297-fcfd8d55442f" />
-渲染的流程是摄像机渲染出图片后加Volume。A是主摄像机，B是创建的模糊相机。然后将B相机渲染出图片，然后与A结果合并，合并后再执行B的Volume（后处理）。
+
+要实现后处理首先项目是URP，如果不是添加URP资源包，改变渲染方式。
+其次相机的Post Processing属性必须要打开才能执行后处理。
+
+添加这个后处理组件。
+
+<img width="1398" height="588" alt="image" src="https://github.com/user-attachments/assets/4073c6a9-ddb7-425b-9697-30371bd0d810" />
+
+实现部分layer被模糊的效果，只能先渲染的相机渲染模糊的，后渲染清晰的。否则清晰的也会变模糊。
+
+渲染顺序是主摄像-stack中的顺序。
+
+具体摄像机的设置
+
+<img width="554" height="1104" alt="image" src="https://github.com/user-attachments/assets/324f7bfd-624c-4b6b-901a-ccad60092e50" />
+
+<img width="596" height="645" alt="image" src="https://github.com/user-attachments/assets/f8924a9c-0712-4b18-b949-3e98fd311b45" />
+
+最后还有摄像机的Volume Mask是这个相机渲染完毕后要执行哪些后处理。
+
+
