--- a/后处理与相机_实现景深效果/笔记.md
+++ b/后处理与相机_实现景深效果/笔记.md
@@ -21,4 +21,5 @@
 
 最后还有摄像机的Volume Mask是这个相机渲染完毕后要执行哪些后处理。
 
+<img width="610" height="284" alt="image" src="https://github.com/user-attachments/assets/39fa1a77-656d-47bc-8eec-d2e3e17120a6" />
 
