--- a/git/笔记.md
+++ b/git/笔记.md
@@ -1,5 +1,18 @@
+git命令
 git status 查看当前的状态，做了哪些操作，这些操作是否在当前提交上。  
 git pull   拉取  
 git push   推送  
 git reset --hard   回退操作  
-git clean -df           
+git clean -df          
+
+git原理  
+git是分布式的，快照流，内容文件存储系统。  
+自动生成".git"文件夹。内容有objects文件夹。   
+commit 代表版本，commit一次就在objects生成一个commit文件保存了作者 提交信息 指针，这个指针指向了上一次提交。  
+Tree   一个指向文件名、内容和其他tree的指针。
+Blob   数据  
+
+add操作，tree指向一个blob节点，add操作后，使tree指向new文件。  
+commit 从暂存区到代码仓库生成一个新的版本和tree文件，并指向上一个版本
+
+
