Add git branch and log commands to notes

--- a/git/笔记.md
+++ b/git/笔记.md
@@ -4,7 +4,9 @@ git pull   拉取
 git push   推送  
 git reset --hard   回退操作  
 git clean -df          
-
+git branch 查看分支
+git log --oneline 查看commit
+git checkout -b OnlyTask origin/OnlyTask  切换分支并与远端的分支建立联系。
 git原理  
 git是分布式的，快照流，内容文件存储系统。  
 自动生成".git"文件夹。内容有objects文件夹。   
