--- a/git/笔记.md
+++ b/git/笔记.md
@@ -8,7 +8,7 @@ git branch 查看分支
 
 git log --oneline 查看commit
 
-git checkout -b OnlyTask origin/OnlyTask  切换分支并与远端的分支建立联系。
+git checkout -b OnlyTask origin/OnlyTask  切换分支并与远端的分支建立联系。（OnlyTask是要切换分支的分支名字）
 
 git原理  
 git是分布式的，快照流，内容文件存储系统。  
